--- a/env.yml
+++ b/env.yml
@@ -598,6 +598,7 @@ dependencies:
       - python-utils==3.8.1
       - requests==2.31.0
       - requests-oauthlib==1.3.1
+      - rotary-embedding-torch==0.3.5
       - rsa==4.9
       - smmap==5.0.1
       - sounddevice==0.4.6
