--- a/src/model/package.xml
+++ b/src/model/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>gesture</name>
+  <name>model</name>
   <version>0.0.0</version>
-  <description>The gesture package</description>
+  <description>The model package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
@@ -15,13 +15,11 @@
   <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
   <license>TODO</license>
 
-  <!-- <exec_depend>gesture</exec_depend> -->
-
 
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/gesture</url> -->
+  <!-- <url type="website">http://wiki.ros.org/model</url> -->
 
 
   <!-- Author tags are optional, multiple are allowed, one per tag -->
