--- a/environment.yml
+++ b/environment.yml
@@ -1,17 +1,25 @@
 name: hri
 channels:
   - robostack-staging
+  - pytorch
+  - nvidia
   - conda-forge
+  - defaults
 dependencies:
   - _libgcc_mutex=0.1=conda_forge
   - _openmp_mutex=4.5=2_gnu
   - adwaita-icon-theme=43=unix_0
+  - aiohttp=3.9.5=py39hd1e30aa_0
+  - aiosignal=1.3.1=pyhd8ed1ab_0
   - alsa-lib=1.2.8=h166bdaf_0
+  - annotated-types=0.6.0=pyhd8ed1ab_0
+  - anyio=4.3.0=pyhd8ed1ab_0
   - aom=3.5.0=h27087fc_0
   - apr=1.7.0=h7f98852_5
   - argcomplete=3.1.6=pyhd8ed1ab_0
   - assimp=5.2.5=hf40c2ba_0
   - asttokens=2.4.1=pyhd8ed1ab_0
+  - async-timeout=4.0.3=pyhd8ed1ab_0
   - atk-1.0=2.38.0=hd4edc92_1
   - attr=2.5.1=h166bdaf_1
   - backports=1.0=pyhd8ed1ab_3
@@ -20,19 +28,22 @@ dependencies:
   - binutils=2.40=hdd6e379_0
   - binutils_impl_linux-64=2.40=hf600244_0
   - binutils_linux-64=2.40=hbdbef99_2
+  - blas=1.0=mkl
   - boost=1.78.0=py39hda80f44_5
   - boost-cpp=1.78.0=h5adbc97_2
   - brotli=1.1.0=hd590300_1
   - brotli-bin=1.1.0=hd590300_1
+  - brotli-python=1.1.0=py39h3d6467e_1
   - bzip2=1.0.8=hd590300_5
   - c-ares=1.21.0=hd590300_0
   - c-compiler=1.6.0=hd590300_0
-  - ca-certificates=2023.7.22=hbcca054_0
+  - ca-certificates=2024.2.2=hbcca054_0
   - cairo=1.16.0=ha61ee94_1014
   - catkin_pkg=1.0.0=pyhd8ed1ab_0
   - catkin_tools=0.9.4=pyhd8ed1ab_0
-  - certifi=2023.7.22=pyhd8ed1ab_0
+  - certifi=2024.2.2=pyhd8ed1ab_0
   - cffi=1.16.0=py39h7a31438_0
+  - charset-normalizer=3.3.2=pyhd8ed1ab_0
   - cmake=3.26.3=h077f3f9_0
   - colcon-argcomplete=0.3.3=pyhd8ed1ab_0
   - colcon-bash=0.5.0=pyhd8ed1ab_0
@@ -63,6 +74,14 @@ dependencies:
   - coreutils=9.4=hd590300_0
   - coverage=7.3.2=py39hd1e30aa_0
   - cryptography=41.0.5=py39hd4f0224_0
+  - cuda-cudart=12.1.105=0
+  - cuda-cupti=12.1.105=0
+  - cuda-libraries=12.1.0=0
+  - cuda-nvrtc=12.1.105=0
+  - cuda-nvtx=12.1.105=0
+  - cuda-opencl=12.4.127=0
+  - cuda-runtime=12.1.0=0
+  - curl=7.88.1=hdc1c0ab_1
   - cxx-compiler=1.6.0=h00ab1b0_0
   - cycler=0.12.1=pyhd8ed1ab_0
   - dbus=1.13.6=h5008d03_3
@@ -71,6 +90,7 @@ dependencies:
   - distlib=0.3.7=pyhd8ed1ab_0
   - distro=1.8.0=pyhd8ed1ab_0
   - docutils=0.20.1=py39hf3d152e_2
+  - double-conversion=3.2.0=h27087fc_1
   - eigen=3.4.0=h00ab1b0_0
   - empy=3.3.4=pyh9f0ad1d_1
   - exceptiongroup=1.1.3=pyhd8ed1ab_0
@@ -91,6 +111,7 @@ dependencies:
   - freeimage=3.18.0=hca5c823_12
   - freetype=2.12.1=h267a509_2
   - fribidi=1.0.10=h36c2ea0_0
+  - frozenlist=1.4.1=py39hd1e30aa_0
   - gcc=12.3.0=h8d2909c_2
   - gcc_impl_linux-64=12.3.0=he2b93b0_3
   - gcc_linux-64=12.3.0=h76fc315_2
@@ -100,10 +121,13 @@ dependencies:
   - gfortran_impl_linux-64=12.3.0=hfcedea8_3
   - gfortran_linux-64=12.3.0=h7fe76b4_2
   - giflib=5.2.1=h0b41bf4_3
+  - gl2ps=1.4.2=h0708190_0
+  - glew=2.1.0=h9c3ff4c_2
   - glib=2.78.1=hfc55251_1
   - glib-tools=2.78.1=hfc55251_1
   - gmock=1.14.0=ha770c72_1
   - gmp=6.3.0=h59595ed_0
+  - gmpy2=2.1.5=py39h048c657_1
   - gnutls=3.7.8=hf3e180e_0
   - gpgme=1.18.0=h27087fc_0
   - graphite2=1.3.13=h58526e2_1001
@@ -117,21 +141,30 @@ dependencies:
   - gxx=12.3.0=h8d2909c_2
   - gxx_impl_linux-64=12.3.0=he2b93b0_3
   - gxx_linux-64=12.3.0=h8a814eb_2
+  - h11=0.14.0=pyhd8ed1ab_0
+  - h2=4.1.0=pyhd8ed1ab_0
   - harfbuzz=6.0.0=h8e241bc_0
+  - hdf4=4.2.15=h9772cbc_5
   - hdf5=1.12.2=nompi_h4df4325_101
   - hicolor-icon-theme=0.17=ha770c72_2
+  - hpack=4.0.0=pyh9f0ad1d_0
+  - httpcore=1.0.5=pyhd8ed1ab_0
+  - httpx=0.27.0=pyhd8ed1ab_0
   - humanfriendly=10.0=pyhd8ed1ab_6
+  - hyperframe=6.0.1=pyhd8ed1ab_0
   - icu=70.1=h27087fc_0
   - imath=3.1.6=h6239696_1
   - importlib-metadata=6.8.0=pyha770c72_0
   - importlib-resources=6.1.1=pyhd8ed1ab_0
   - importlib_resources=6.1.1=pyhd8ed1ab_0
   - iniconfig=2.0.0=pyhd8ed1ab_0
+  - intel-openmp=2022.1.0=h9e868ea_3769
   - ipython=8.17.2=pyh41d4057_0
   - jack=1.9.22=h11f4161_0
   - jasper=2.0.33=h0ff4b12_1
   - jedi=0.19.1=pyhd8ed1ab_0
-  - jpeg=9e=h0b41bf4_3
+  - jpeg=9e=h166bdaf_2
+  - jsoncpp=1.9.5=h4bd325d_1
   - jxrlib=1.1=h7f98852_2
   - kernel-headers_linux-64=2.6.32=he073ed8_16
   - keyutils=1.6.1=h166bdaf_0
@@ -146,16 +179,22 @@ dependencies:
   - libapriconv=1.2.2=h7f98852_5
   - libaprutil=1.6.1=h975c496_5
   - libassuan=2.5.6=h59595ed_0
-  - libblas=3.9.0=19_linux64_openblas
+  - libblas=3.9.0=16_linux64_mkl
   - libbrotlicommon=1.1.0=hd590300_1
   - libbrotlidec=1.1.0=hd590300_1
   - libbrotlienc=1.1.0=hd590300_1
   - libcap=2.67=he9d0100_0
-  - libcblas=3.9.0=19_linux64_openblas
+  - libcblas=3.9.0=16_linux64_mkl
   - libclang=15.0.7=default_h7634d5b_3
   - libclang13=15.0.7=default_h9986a30_3
+  - libcublas=12.1.0.26=0
+  - libcufft=11.0.2.4=0
+  - libcufile=1.9.1.3=0
   - libcups=2.3.3=h36d4200_3
+  - libcurand=10.3.5.147=0
   - libcurl=7.88.1=hdc1c0ab_1
+  - libcusolver=11.4.4.55=0
+  - libcusparse=12.0.2.55=0
   - libdb=6.2.32=h9c3ff4c_0
   - libdeflate=1.17=h0b41bf4_0
   - libdrm=2.4.114=h166bdaf_0
@@ -175,13 +214,19 @@ dependencies:
   - libglu=9.0.0=he1b5a44_1001
   - libgomp=13.2.0=h807b86a_3
   - libgpg-error=1.47=h71f35ed_0
+  - libhwloc=2.9.1=hd6dc26d_0
   - libiconv=1.17=h166bdaf_0
   - libidn2=2.3.4=h166bdaf_0
-  - liblapack=3.9.0=19_linux64_openblas
-  - liblapacke=3.9.0=19_linux64_openblas
+  - libjpeg-turbo=2.0.0=h9bf148f_0
+  - liblapack=3.9.0=16_linux64_mkl
+  - liblapacke=3.9.0=16_linux64_mkl
   - libllvm15=15.0.7=hadd5161_1
+  - libnetcdf=4.9.1=nompi_h34a3ff0_101
   - libnghttp2=1.58.0=h47da74e_0
+  - libnpp=12.0.2.50=0
   - libnsl=2.0.1=hd590300_0
+  - libnvjitlink=12.1.105=0
+  - libnvjpeg=12.1.1.14=0
   - libogg=1.3.4=h7f98852_1
   - libopenblas=0.3.24=pthreads_h413a1c8_0
   - libopencv=4.6.0=py39hb375605_9
@@ -201,6 +246,7 @@ dependencies:
   - libstdcxx-ng=13.2.0=h7e041cc_3
   - libsystemd0=253=h8c4010b_1
   - libtasn1=4.19.0=h166bdaf_0
+  - libtheora=1.1.1=h7f98852_1005
   - libtiff=4.5.0=h6adf6a1_2
   - libtool=2.4.7=h27087fc_0
   - libudev1=253=h0b41bf4_1
@@ -215,30 +261,42 @@ dependencies:
   - libxcb=1.13=h7f98852_1004
   - libxkbcommon=1.5.0=h79f4944_1
   - libxml2=2.10.3=hca2bb57_4
+  - libzip=1.10.1=h2629f0a_3
   - libzlib=1.2.13=hd590300_5
+  - llvm-openmp=15.0.7=h0cdce71_0
   - log4cxx=0.11.0=h291d653_3
+  - loguru=0.7.2=py39hf3d152e_1
   - lz4=4.3.2=py39h79d96da_1
   - lz4-c=1.9.4=hcb278e6_0
   - make=4.3=hd18ef5c_1
   - matplotlib-base=3.8.1=py39he9076e7_0
   - matplotlib-inline=0.1.6=pyhd8ed1ab_0
+  - mkl=2022.1.0=hc2b9512_224
+  - mpc=1.3.1=hfe3b2da_0
+  - mpfr=4.2.1=h9458935_1
   - mpg123=1.32.3=h59595ed_0
+  - mpmath=1.3.0=pyhd8ed1ab_0
+  - msgpack-python=1.0.8=py39h95fdab5_0
+  - multidict=6.0.5=py39hd1e30aa_0
   - munkres=1.1.4=pyh9f0ad1d_0
   - mysql-common=8.0.33=hf1915f5_6
   - mysql-libs=8.0.33=hca2cd23_6
   - ncurses=6.4=h59595ed_2
   - netifaces=0.11.0=py39hd1e30aa_2
   - nettle=3.8.1=hc379101_1
+  - networkx=3.2.1=pyhd8ed1ab_0
   - ninja=1.11.1=h924138e_0
+  - nlohmann_json=3.11.3=h59595ed_0
   - nose=1.3.7=py_1006
   - nspr=4.35=h27087fc_0
   - nss=3.94=h1d7d5a4_0
   - numpy=1.26.0=py39h474f0d3_0
   - ogre=1.10.12=h7cc4a1d_10
+  - openai=1.24.0=pyhd8ed1ab_0
   - openexr=3.1.5=h0cdce71_2
   - openh264=2.3.1=hcb278e6_2
   - openjpeg=2.5.0=hfec8fc6_2
-  - openssl=3.1.4=hd590300_0
+  - openssl=3.3.0=h4ab18f5_2
   - orocos-kdl=1.5.1=h59595ed_5
   - osrf_pycommon=0.2.1=pyhd8ed1ab_0
   - p11-kit=0.24.1=hc5aa10d_0
@@ -256,6 +314,8 @@ dependencies:
   - pluggy=1.3.0=pyhd8ed1ab_0
   - ply=3.11=py_1
   - poco=1.12.4=h08a2579_0
+  - portaudio=19.6.0=h583fa2b_7
+  - proj=9.1.1=h8ffa02c_2
   - prompt-toolkit=3.0.41=pyha770c72_0
   - prompt_toolkit=3.0.41=hd8ed1ab_0
   - psutil=5.9.5=py39hd1e30aa_1
@@ -267,12 +327,15 @@ dependencies:
   - pulseaudio-daemon=16.1=ha8d29e2_3
   - pure_eval=0.2.2=pyhd8ed1ab_0
   - py-opencv=4.6.0=py39hcca971b_9
+  - pyaudio=0.2.14=py39hd1e30aa_0
   - pybind11=2.11.1=py39h7633fee_2
   - pybind11-global=2.11.1=py39h7633fee_2
   - pycairo=1.25.0=py39hc92de75_1
   - pycparser=2.21=pyhd8ed1ab_0
   - pycryptodome=3.19.0=py39h6f9bf71_1
   - pycryptodomex=3.19.0=py39hd1e30aa_1
+  - pydantic=2.7.1=pyhd8ed1ab_0
+  - pydantic-core=2.18.2=py39ha68c5e3_0
   - pydot=1.4.2=py39hf3d152e_4
   - pygments=2.16.1=pyhd8ed1ab_0
   - pynacl=1.5.0=py39hd1e30aa_3
@@ -282,6 +345,7 @@ dependencies:
   - pyqt-builder=1.15.3=pyhd8ed1ab_0
   - pyqt5-sip=12.12.2=py39h3d6467e_5
   - pyqtwebengine=5.15.9=py39h071a739_5
+  - pysocks=1.7.1=pyha2e5f31_6
   - pytest=7.4.3=pyhd8ed1ab_0
   - pytest-cov=4.1.0=pyhd8ed1ab_0
   - pytest-repeat=0.9.2=pyhd8ed1ab_0
@@ -291,10 +355,14 @@ dependencies:
   - python-gnupg=0.5.0=pyhd8ed1ab_0
   - python-orocos-kdl=1.5.1=py39h3d6467e_5
   - python_abi=3.9=4_cp39
+  - pytorch=2.3.0=py3.9_cuda12.1_cudnn8.9.2_0
+  - pytorch-cuda=12.1=ha16c6d3_5
+  - pytorch-mutex=1.0=cuda
   - pyyaml=6.0.1=py39hd1e30aa_1
   - qt-main=5.15.8=h5d23da1_6
   - qt-webengine=5.15.8=h77d6d84_0
   - readline=8.2=h8228510_1
+  - requests=2.31.0=pyhd8ed1ab_0
   - rhash=1.4.3=hd590300_2
   - ros-distro-mutex=0.4.0=noetic
   - ros-noetic-actionlib=1.14.0=py39h873cbd0_16
@@ -489,24 +557,36 @@ dependencies:
   - setuptools=68.2.2=pyhd8ed1ab_0
   - sip=6.7.12=py39h3d6467e_0
   - six=1.16.0=pyh6c4a22f_0
+  - sniffio=1.3.1=pyhd8ed1ab_0
+  - sqlite=3.44.0=h2c6b66d_0
   - stack_data=0.6.2=pyhd8ed1ab_0
   - svt-av1=1.4.1=hcb278e6_0
   - swig=4.1.1=h1bc8f3f_2
+  - sympy=1.12=pypyh9d50eac_103
   - sysroot_linux-64=2.12=he073ed8_16
+  - tbb=2021.9.0=hf52228f_0
+  - tbb-devel=2021.9.0=hf52228f_0
   - tinyxml=2.6.2=h4bd325d_2
   - tinyxml2=9.0.0=h9c3ff4c_2
   - tk=8.6.13=noxft_h4845f30_101
   - toml=0.10.2=pyhd8ed1ab_0
   - tomli=2.0.1=pyhd8ed1ab_0
+  - torchaudio=2.3.0=py39_cu121
+  - torchtriton=2.3.0=py39
   - traitlets=5.13.0=pyhd8ed1ab_0
+  - typing-extensions=4.8.0=hd8ed1ab_0
   - typing_extensions=4.8.0=pyha770c72_0
   - tzdata=2023c=h71feb2d_0
   - unicodedata2=15.1.0=py39hd1e30aa_0
   - unixodbc=2.3.12=h661eb56_0
   - urdfdom=3.1.1=h8a9b4ce_0
   - urdfdom_headers=1.1.0=h924138e_0
+  - utfcpp=4.0.5=ha770c72_0
+  - vtk=9.2.6=qt_py39hfb82713_200
   - wcwidth=0.2.10=pyhd8ed1ab_0
   - wheel=0.41.3=pyhd8ed1ab_0
+  - whisper=1.1.5=py39h06a4308_0
+  - wslink=2.0.3=pyhd8ed1ab_0
   - x264=1!164.3095=h166bdaf_2
   - x265=3.5=h924138e_3
   - xcb-util=0.4.0=h516909a_0
@@ -537,6 +617,7 @@ dependencies:
   - xz=5.2.6=h166bdaf_0
   - yaml=0.2.5=h7f98852_2
   - yaml-cpp=0.7.0=h59595ed_3
+  - yarl=1.9.4=py39hd1e30aa_0
   - zipp=3.17.0=pyhd8ed1ab_0
   - zlib=1.2.13=hd590300_5
   - zstd=1.5.5=hfc55251_0
@@ -552,7 +633,6 @@ dependencies:
       - bosdyn-core==3.3.2
       - bosdyn-mission==3.3.2
       - cachetools==5.3.2
-      - charset-normalizer==3.3.2
       - deprecated==1.2.14
       - einops==0.7.0
       - filelock==3.13.1
@@ -565,14 +645,16 @@ dependencies:
       - google-auth-oauthlib==1.1.0
       - grpcio==1.59.2
       - h5py==3.10.0
+      - hdpitkinter==1.0.3
       - hickle==5.0.2
       - idna==3.4
       - jinja2==3.1.2
+      - llvmlite==0.42.0
       - markdown==3.5.1
       - markupsafe==2.1.3
       - mediapipe==0.10.8
-      - mpmath==1.3.0
-      - networkx==3.2.1
+      - more-itertools==10.2.0
+      - numba==0.59.1
       - nvidia-cublas-cu12==12.1.3.1
       - nvidia-cuda-cupti-cu12==12.1.105
       - nvidia-cuda-nvrtc-cu12==12.1.105
@@ -586,6 +668,7 @@ dependencies:
       - nvidia-nvjitlink-cu12==12.3.101
       - nvidia-nvtx-cu12==12.1.105
       - oauthlib==3.2.2
+      - openai-whisper==20231117
       - opencv-contrib-python==4.8.1.78
       - perceiver-pytorch==0.8.8
       - progressbar2==4.2.0
@@ -594,18 +677,20 @@ dependencies:
       - pyasn1-modules==0.3.0
       - pyjwt==2.8.0
       - pyrealsense2==2.54.2.5684
-      - pysocks==1.7.1
       - python-utils==3.8.1
-      - requests==2.31.0
+      - pyttsx3==2.90
+      - regex==2024.4.28
       - requests-oauthlib==1.3.1
       - rotary-embedding-torch==0.3.5
       - rsa==4.9
       - smmap==5.0.1
       - sounddevice==0.4.6
       - soupsieve==2.5
-      - sympy==1.12
+      - speechrecognition==3.10.3
       - tensorboard==2.15.1
       - tensorboard-data-server==0.7.2
+      - thinplate==1.0.0
+      - tiktoken==0.6.0
       - torch==2.1.1
       - torchvision==0.16.1
       - tqdm==4.66.1
@@ -613,4 +698,4 @@ dependencies:
       - urllib3==2.1.0
       - werkzeug==3.0.1
       - wrapt==1.16.0
-prefix: /home/adam/miniforge3/envs/hri
+prefix: /home/rpm-laptop-01/Software/miniconda3/envs/hri
